Upgrade(s): replace text and style.css

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>Texto e imagens extraidos do
                 <a href="https://pt.wikipedia.org/wiki/S%C3%A3o_Jos%C3%A9_dos_Campos" target="_blank">wikipedia.
                 </a>
-            <p>Author da foto:
+            <p><strong>Author</strong> da foto:
                 <a href="https://web.archive.org/web/20161022122520/http://www.panoramio.com/photo/61168307"
                     target="_blank">Rodrigo Gelmi</a>
         </section>
@@ -131,7 +131,7 @@
                 <a
                     href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_do_Vale_do_Para%C3%ADba_e_Litoral_Norte">wikipedia</a>.
             </p>
-            <p>Foto extraída do site
+            <p><strong>Foto extraída do site</strong>
                 <a
                     href="https://peakvisor.com/photo/4/4f/Pico_da_Gomeira_Serra_da_Mantiqueira_January_2014.jpg">peakvisor.com</a>
             </p>
@@ -144,10 +144,10 @@
                 RA de <strong>Sorocaba</strong> vem apresentando, nos últimos anos, um intenso crescimento
                 populacional.
             </p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://www.al.sp.gov.br/noticia/?id=290540">https://www.al.sp.gov.br/noticia/?id=290540</a>.
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a
                     href="https://noticias.sorocaba.sp.gov.br/regiao-administrativa-de-sorocaba-tem-segundo-maior-crescimento-do-pib-do/">https://noticias.sorocaba.sp.gov.br/regiao-administrativa-de-sorocaba-tem-segundo-maior-crescimento-do-pib-do/</a>.
             </p>
@@ -162,11 +162,11 @@
                 região metropolitana tem cerca de 2,1 milhões de habitantes e um PIB (Produto
                 Interno Bruto) de R$ 77,9 bilhões. Com isso a RMS passa a ser a 15ª mais
                 populosa do país.</p>
-            <p>Texto extraido do site wikipedia:
+            <p><strong>Texto extraido do site</strong> wikipedia:
                 <a href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_Sorocaba"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_Sorocaba</a>
             </p>
-            <p>Foto extraída do site wikipedia:
+            <p><strong>Foto extraída do site</strong> wikipedia:
                 <a href="https://commons.wikimedia.org/wiki/File:Sorocaba_view_flat1.jpg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Sorocaba_view_flat1.jpg</a>
             </p>
@@ -192,11 +192,11 @@
                 megalópole que, já em 2008, compreendia 12% da população brasileira, ou cerca de
                 30 milhões de habitantes.
             </p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_Campinas"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_Campinas</a>
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a href="https://tudoparahomens.com.br/12-locais-para-se-visitar-em-campinas-sp/"
                     target="_blank">https://tudoparahomens.com.br/12-locais-para-se-visitar-em-campinas-sp/</a>
             </p>
@@ -212,21 +212,21 @@
                 75 mil habitantes e Monte Alto com 49 mil habitantes. Os Municípios da Região
                 Administrativa de Ribeirão Preto podem fazer parte de um projeto de lei que
                 propõe a implementação da futura região metropolitana de Ribeirão Preto RMRP</p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Administrativa_de_Ribeir%C3%A3o_Preto"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Administrativa_de_Ribeir%C3%A3o_Preto</a>
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a href="https://tudoparahomens.com.br/12-locais-para-se-visitar-em-campinas-sp/https://commons.wikimedia.org/wiki/File:Vista_parcial_da_Zona_Sul_a_partir_do_Parque_Curupira,_de_Ribeir%C3%A3o_Preto_2016.jpg"
                     target="_blank">https://tudoparahomens.com.br/12-locais-para-se-visitar-em-campinas-sp/https://commons.wikimedia.org/wiki/File:Vista_parcial_da_Zona_Sul_a_partir_do_Parque_Curupira,_de_Ribeir%C3%A3o_Preto_2016.jpg</a>
             </p>
-            <p>Author: Anderson Bueno Pereira</p>
+            <p><strong>Author</strong>: Anderson Bueno Pereira</p>
         </section>
 
         <section class="Regiao-Metropolitana-de-Ribeirão-Preto">Região Metropolitana de Ribeirão Preto
         </section>
         <section class="text-Regiao-Metropolitana-de-Ribeirão-Preto">
-            <p>Ribeirão Preto (pronúncia em português: [ʁibejˈɾɐ̃w ˈpɾetu]) é um município
+            <p><strong>Ribeirão Preto</strong> (pronúncia em português: [ʁibejˈɾɐ̃w ˈpɾetu]) é um município
                 brasileiro sede da Região Metropolitana de Ribeirão Preto (RMRP), no interior do
                 estado de <strong>São Paulo</strong>, Região Sudeste do país. Pertence à Mesorregião e
                 Microrregião de Ribeirão Preto, localizando-se a nordeste do estado, distando da
@@ -239,11 +239,11 @@
                 relação ao valor do ano anterior. Este índice é superior ao nacional, de 0,74% e
                 também está acima do estadual, de 0,64%.
             </p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a
                     href="https://pt.wikipedia.org/wiki/Ribeir%C3%A3o_Preto">https://pt.wikipedia.org/wiki/Ribeir%C3%A3o_Preto</a>
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a
                     href="https://3em3.com/ribeirao-preto-brasil-o-que-fazer-em-um-final-de-semana/">https://3em3.com/ribeirao-preto-brasil-o-que-fazer-em-um-final-de-semana/</a>
             </p>
@@ -261,14 +261,14 @@
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> foi de 381 706 habitantes, sendo
                 o
                 18º mais populoso de <strong>São Paulo</strong></p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://pt.wikipedia.org/wiki/Bauru" target="_blank">https://pt.wikipedia.org/wiki/Bauru</a>
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a href="https://www.flickr.com/people/marcosenche/"
                     target="_blank">https://www.flickr.com/people/marcosenche/</a>
             </p>
-            <p>Author(s): Marco Senche /  Marco Antônio</p>
+            <p><strong>Author</strong>(s): Marco Senche /  Marco Antônio</p>
         </section>
 
         <section class="Regiao-Administrativa-de-Sao-Jose-do-Rio-Preto">Região Administrativa de São
@@ -283,15 +283,15 @@
                 municípios, tendo uma população estimada pelo <abbr
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> para 1.º de julho de 2017, de
                 897 203 habitantes e uma área total de 11 772,814 km².</p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_S%C3%A3o_Jos%C3%A9_do_Rio_Preto"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_S%C3%A3o_Jos%C3%A9_do_Rio_Preto</a>
             </p>
-            <p>Foto extraída do site:
+            <p><strong>Foto extraída do site</strong>:
                 <a href="https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_S%C3%A3o_Jos%C3%A9_do_Rio_Preto,_S%C3%A3o_Paulo.svg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_S%C3%A3o_Jos%C3%A9_do_Rio_Preto,_S%C3%A3o_Paulo.svg</a>
             </p>
-            <p>Author:
+            <p><strong>Author</strong>:
                 <a href="https://commons.wikimedia.org/wiki/User:Allice_Hunter" target="_blank">Allice Hunter</a>
             </p>
         </section>
@@ -311,15 +311,15 @@
                 o município mais populoso da região intermediária, com 195 874 habitantes, de
                 acordo com estimativas de 2018 do Instituto Brasileiro de Geografia e
                 Estatística (IBGE). </p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Intermedi%C3%A1ria_de_Ara%C3%A7atuba#cite_note-IBGE_Area_Municipios_2017-2"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Intermedi%C3%A1ria_de_Ara%C3%A7atuba#cite_note-IBGE_Area_Municipios_2017-2</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://commons.wikimedia.org/wiki/File:Aracatuba_Intermediate_Region_location_map.svg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Aracatuba_Intermediate_Region_location_map.svg</a>
             </p>
-            <p>Author: Padula97</p>
+            <p><strong>Author</strong>: Padula97</p>
         </section>
 
         <section class="Regiao-Administrativa-de-Presidente-Prudente">Região Administrativa de
@@ -335,16 +335,16 @@
                 É composta por 28 municípios, tendo uma população estimada pelo <abbr
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> para 1.º de julho de 2017, de
                 536 406 habitantes e uma área total de 15 078,835 km².</p>
-            <p>Texto extraido do site: <a
+            <p><strong>Texto extraido do site</strong>: <a
                     href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_Presidente_Prudente"
                     target="_blank"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_Presidente_Prudente</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_Presidente_Prudente,_S%C3%A3o_Paulo.svg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_Presidente_Prudente,_S%C3%A3o_Paulo.svg</a>
             </p>
-            <p>Author: Allice Hunter</p>
+            <p><strong>Author</strong>: Allice Hunter</p>
         </section>
 
         <section class="Regiao-Administrativa-de-Marília">Região Administrativa de Marília</section>
@@ -359,14 +359,14 @@
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> para 1.º de julho de 2017, de
                 386 714 habitantes e uma área total de 6 691,819 km².
             </p>
-            <p>Texto extraido do site:
+            <p><strong>Texto extraido do site</strong>:
                 <a>https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_Mar%C3%ADlia</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_Mar%C3%ADlia,_S%C3%A3o_Paulo.svg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Regi%C3%A3o_Imediata_de_Mar%C3%ADlia,_S%C3%A3o_Paulo.svg</a>
             </p>
-            <p>Author: Allice Hunter</p>
+            <p><strong>Author</strong>: Allice Hunter</p>
         </section>
 
         <section class="Regiao-Administrativa-Central">Região Administrativa Central</section>
@@ -380,33 +380,33 @@
                 A distância rodoviária mínima entre São Carlos e Araraquara é hoje de 28 km, divididas apenas por uma
                 auto-estrada que é praticamente uma avenida de ligação entre o km 240 e o km 268 da Rodovia Washington
                 Luís, que são os limites de acesso urbano de cada cidade pela rodovia.</p>
-            <p>Texto extraido do site: <a
+            <p><strong>Texto extraido do site</strong>: <a
                     href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Administrativa_Central_(S%C3%A3o_Paulo)"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Administrativa_Central_(S%C3%A3o_Paulo)</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://pt.wikipedia.org/wiki/Araraquara#/media/Ficheiro:Araraquara_on_July_2016_02.jpg"
                     target="_blank">https://pt.wikipedia.org/wiki/Araraquara#/media/Ficheiro:Araraquara_on_July_2016_02.jpg</a>
             </p>
-            <p>Author: Sturm</p>
+            <p><strong>Author</strong>: Sturm</p>
         </section>
 
         <section class="Regiao-Administrativa-de-Barretos">Região Administrativa de Barretos</section>
         <section class="text-Regiao-Administrativa-de-Barretos">
             <p>A Região Geográfica Imediata de <strong>Barretos</strong> é uma das 53 regiões imediatas do estado
                 brasileiro de São
-                Paulo, uma das cinco regiões imediatas que compõem a Região Geográfica Intermediária de Ribeirão Preto e
+                Paulo, uma das cinco regiões imediatas que compõem a Região Geográfica Intermediária de <strong>Ribeirão Preto</strong> e
                 uma das 509 regiões imediatas no Brasil, criadas pelo <abbr
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> em 2017.
 
                 É composta por 16 municípios, tendo uma população estimada pelo <abbr
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> para 1.º de julho de 2017, de
                 424 560 habitantes e uma área total de 7 689,791 km².</p>
-            <p>Texto extraido do site: <a
+            <p><strong>Texto extraido do site</strong>: <a
                     href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_Barretos"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Geogr%C3%A1fica_Imediata_de_Barretos</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://www.tripadvisor.com.br/Tourism-g1647628-Barretos_State_of_Sao_Paulo-Vacations.html#/media/1647628/'74744091':p/?focusedIndex=2"
                     target="_blank">https://www.tripadvisor.com.br/Tourism-g1647628-Barretos_State_of_Sao_Paulo-Vacations.html#/media/1647628/'74744091':p/?focusedIndex=2</a>
             </p>
@@ -423,13 +423,13 @@
                 605,679 km², dos quais 86,92 km² estão em zona urbana, e sua população estimada em agosto de 2021 era de
                 358.539 habitantes. É conhecida em todo Brasil como a Capital Nacional do Calçado e a Capital
                 Nacional do Basquete. </p>
-            <p>Texto extraido do site: <a href="https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a"
+            <p><strong>Texto extraido do site</strong>: <a href="https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a</a>
             </p>
-            <p>Foto extraída do site: <a href="https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg"
+            <p><strong>Foto extraída do site</strong>: <a href="https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg</a>
             </p>
-            <p>Author: Arcfranca</p>
+            <p><strong>Author</strong>: Arcfranca</p>
         </section>
 
         <section class="Regiao-Administrativa-de-Itapeva">Região Administrativa de Itapeva</section>
@@ -451,14 +451,14 @@
                 estadual, além de ser a escolha de empresas privadas para a construção de alguns condomínios para a
                 classe media.
             </p>
-            <p>Texto extraido do site: <a href="https://pt.wikipedia.org/wiki/Itapeva_(S%C3%A3o_Paulo)"
+            <p><strong>Texto extraido do site</strong>: <a href="https://pt.wikipedia.org/wiki/Itapeva_(S%C3%A3o_Paulo)"
                     target="_blank">https://pt.wikipedia.org/wiki/Itapeva_(S%C3%A3o_Paulo)</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://commons.wikimedia.org/wiki/File:Parcial_do_centro_de_Itapeva_ao_por_do_sol.jpg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Parcial_do_centro_de_Itapeva_ao_por_do_sol.jpg</a></a>
             </p>
-            <p>Author: NyckolasKlais</p>
+            <p><strong>Author</strong>: NyckolasKlais</p>
         </section>
 
         <section class="Regiao-Metropolitana-de-São-Paulo">Região Metropolitana de <strong>São Paulo</strong></section>
@@ -482,23 +482,23 @@
                 Outras regiões
                 próximas a <strong>São Paulo</strong> são também regiões metropolitanas do estado, como
                 <strong>Campinas</strong>, <strong>Baixada Santista</strong>, Vale
-                do Paraíba, Sorocaba e Jundiaí. O chamado Complexo Metropolitano Expandido, megalópole da qual a Grande
+                do Paraíba, <strong>Sorocaba</strong> e <strong>Jundiaí</strong>. O chamado Complexo Metropolitano Expandido, megalópole da qual a Grande
                 <strong>São Paulo</strong> faz parte, ultrapassa os 32,2 milhões de habitantes, aproximadamente 75% da
                 população do
                 estado. As regiões metropolitanas de <strong>Campinas</strong> e de <strong>São Paulo</strong>, são
                 interligadas pela Região Metropolitana
-                de Jundiaí, e formam a primeira macrometrópole do hemisfério sul, unindo 72 municípios que, juntos,
+                de <strong>Jundiaí</strong>, e formam a primeira macrometrópole do hemisfério sul, unindo 72 municípios que, juntos,
                 abrigam 12% da população brasileira.
             </p>
-            <p>Texto extraido do site: <a
+            <p><strong>Texto extraido do site</strong>: <a
                     href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_S%C3%A3o_Paulo"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_de_S%C3%A3o_Paulo</a>
             </p>
-            <p>Foto extraída do site: <a
+            <p><strong>Foto extraída do site</strong>: <a
                     href="https://commons.wikimedia.org/wiki/File:S%C3%A3o_Paulo_city_(Bela_Vista).jpg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:S%C3%A3o_Paulo_city_(Bela_Vista).jpg</a>
             </p>
-            <p>Author: Júlio Boaro <a href="https://www.flickr.com/photos/julioboaro/8264606991/"
+            <p><strong>Author</strong>: Júlio Boaro <a href="https://www.flickr.com/photos/julioboaro/8264606991/"
                     target="_blank">https://www.flickr.com/photos/julioboaro/8264606991/</a>
             </p>
         </section>
