Update: link CSS and others styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -395,7 +395,8 @@
         <section class="text-Regiao-Administrativa-de-Barretos">
             <p>A Região Geográfica Imediata de <strong>Barretos</strong> é uma das 53 regiões imediatas do estado
                 brasileiro de São
-                Paulo, uma das cinco regiões imediatas que compõem a Região Geográfica Intermediária de <strong>Ribeirão Preto</strong> e
+                Paulo, uma das cinco regiões imediatas que compõem a Região Geográfica Intermediária de <strong>Ribeirão
+                    Preto</strong> e
                 uma das 509 regiões imediatas no Brasil, criadas pelo <abbr
                     title="Instituto Brasileiro de Geografia e Estatística">IBGE</abbr> em 2017.
 
@@ -423,10 +424,12 @@
                 605,679 km², dos quais 86,92 km² estão em zona urbana, e sua população estimada em agosto de 2021 era de
                 358.539 habitantes. É conhecida em todo Brasil como a Capital Nacional do Calçado e a Capital
                 Nacional do Basquete. </p>
-            <p><strong>Texto extraido do site</strong>: <a href="https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a"
+            <p><strong>Texto extraido do site</strong>: <a
+                    href="https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a"
                     target="_blank">https://pt.wikipedia.org/wiki/Regi%C3%B5es_da_Fran%C3%A7a</a>
             </p>
-            <p><strong>Foto extraída do site</strong>: <a href="https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg"
+            <p><strong>Foto extraída do site</strong>: <a
+                    href="https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg"
                     target="_blank">https://commons.wikimedia.org/wiki/File:Panorama_Franca_SP.jpg</a>
             </p>
             <p><strong>Author</strong>: Arcfranca</p>
@@ -482,12 +485,14 @@
                 Outras regiões
                 próximas a <strong>São Paulo</strong> são também regiões metropolitanas do estado, como
                 <strong>Campinas</strong>, <strong>Baixada Santista</strong>, Vale
-                do Paraíba, <strong>Sorocaba</strong> e <strong>Jundiaí</strong>. O chamado Complexo Metropolitano Expandido, megalópole da qual a Grande
+                do Paraíba, <strong>Sorocaba</strong> e <strong>Jundiaí</strong>. O chamado Complexo Metropolitano
+                Expandido, megalópole da qual a Grande
                 <strong>São Paulo</strong> faz parte, ultrapassa os 32,2 milhões de habitantes, aproximadamente 75% da
                 população do
                 estado. As regiões metropolitanas de <strong>Campinas</strong> e de <strong>São Paulo</strong>, são
                 interligadas pela Região Metropolitana
-                de <strong>Jundiaí</strong>, e formam a primeira macrometrópole do hemisfério sul, unindo 72 municípios que, juntos,
+                de <strong>Jundiaí</strong>, e formam a primeira macrometrópole do hemisfério sul, unindo 72 municípios
+                que, juntos,
                 abrigam 12% da população brasileira.
             </p>
             <p><strong>Texto extraido do site</strong>: <a
